# prng-benchmark

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: mcml_mcg59.h  next_floating_point.hpp  splitmix64.hpp  xorshift128plus.hpp
results/: results-latency.json  results-throughput.json  results_1_msvc.json  results_2_gcc.json  results_3_inline.json  results_4_turbo.json  results_throughput.json
results/32-bit/: results-latency-32bit.json  results-throughput-32bit.json
results/lattice-test/: mcg59_512_double.txt  mt19937_512_double.txt  taus88_512_double.txt
results/lattice-test/10x10/: mcg59_10_double.txt  mt11213b_10_double.txt  mt19937_10_double.txt  taus88_10_double.txt  xorshift128plus_10_double.txt
results/lattice-test/512x512/: mt11213b_512_double.txt  xorshift128plus_512_double.txt
scripts/: autorun.bat  autorun.sh  visualizer.ipynb
sln/: prng-benchmark.sln  prng-benchmark.vcxproj  prng-benchmark.vcxproj.filters
src/: benchmark.cpp  lattice-test.cpp  main.cpp  mcml_mcg59.cpp
